# elementary-l10n

./: .gitignore  COPYING  README.md  elementary-l10n_0.2.1_all.deb  elementary-l10n_0.2.2_all.deb  elementary-l10n_0.2.3_all.deb  po4a.cfg  pyproject.toml  se.danielnylander.TranslationStatus.yml
.github/workflows/: build-rpm.yml  release.yml
.tx/: config
build-new/: elementary-l10n_0.2.3_all.deb
build-new/elementary-l10n_0.2.1_all/DEBIAN/: control
build-new/elementary-l10n_0.2.2_all/DEBIAN/: control
build-new/elementary-l10n_0.2.2_all/usr/share/applications/: se.danielnylander.TranslationStatus.desktop
build-new/elementary-l10n_0.2.3_all/DEBIAN/: control
build-new/elementary-l10n_0.2.3_all/usr/lib/python3/dist-packages/elementary_l10n/: __init__.py  app.py  weblate.py
data/: se.danielnylander.TranslationStatus.desktop  se.danielnylander.TranslationStatus.desktop.in  se.danielnylander.TranslationStatus.metainfo.xml  se.danielnylander.elementary-l10n.desktop  se.danielnylander.elementary-l10n.desktop.in
data/man/: elementary-l10n.1
po/: README.md  elementary-l10n.pot  sv.mo  sv.po
po/man/: elementary-l10n.1.pot  sv.po
po/sv/LC_MESSAGES/: elementary-l10n.mo
rpm-build/elementary-l10n_0.2.1/usr/lib/python3/dist-packages/elementary_l10n/: app.py
rpm-build/elementary-l10n_0.2.1/usr/share/locale/sv/LC_MESSAGES/: elementary-l10n.mo
src/elementary_l10n/: __init__.py  app.py  weblate.py
