[build-system]
requires = ["setuptools>=68.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "elementary-l10n"
version = "0.2.1"
description = "Translation status viewer for Weblate-hosted projects"
readme = "README.md"
license = "GPL-3.0-or-later"
requires-python = ">=3.10"
authors = [
    { name = "Daniel Nylander", email = "daniel@danielnylander.se" },
]
dependencies = [
    "PyGObject>=3.42",
    "requests>=2.28",
]

[project.scripts]
elementary-l10n = "elementary_l10n.app:main"

[tool.setuptools.packages.find]
where = ["src"]
